Fix: Logout button alignment

--- a/shared/components/header/header.module.css
+++ b/shared/components/header/header.module.css
@@ -30,6 +30,14 @@
 
 }
 
+.signoutlink{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+
+}
+
 .linkLabel {
     margin-right: rem(5px);
 }
